run-e2e-test.sh improvements